service.yaml
kind: Service
apiVersion: v1
metadata:
  name: random-echo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: random-echo
