ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: some-ingress
spec:
  ingressClassName: public
  rules:
  - host: echo.weterynarz24h.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: random-echo
            port:
              number: 8080
